--- a/WebApplication1/wwwroot/assets/scss/_color.scss
+++ b/WebApplication1/wwwroot/assets/scss/_color.scss
@@ -3,21 +3,21 @@
 
 //Colors
 	$white: #ffffff;
-	$black: #16161a;
-	$gray:#f7f7fd;
+$black: #143727;//green
+$gray: #aa996b;//gold
 
 //Theme color
-	$theme-color: #9F78FF;
-	$theme-color2: #1f2b7b;
-	$theme-color3: #f27420;
-	$theme-color4: #ff3500;
+$theme-color: #aa996b;//gold
+$theme-color2: #f9d6de;//pink
+$theme-color3: #d0f0ec;//light blue
+$theme-color4: #e15200;//orange
 
 // btn and Section color
-	$btn_bg:#9F78FF;
+$btn_bg: #aa996b;//gold
 
 // Heading color
-	$heading-color:#140C40;
-	$heading_color2: #080808;
+$heading-color: #143727; //green
+	$heading_color2: #ffffff;//green
 
 	
 // Body font color
