--- a/WebApplication1/Views/Home/Cart.cshtml
+++ b/WebApplication1/Views/Home/Cart.cshtml
@@ -1,8 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Cart";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
+<main>
 <!-- breadcrumb Start-->
 <div class="page-notification">
     <div class="container">
@@ -77,7 +78,6 @@
                                             <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
                                         </div>
                                     </div>
-
                                 </td>
                                 <td>$49.00</td>
                                 <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
@@ -147,4 +147,5 @@
         </div>
     </div>
 </div>
+</main>
 
