--- a/WebApplication1/Views/Home/Cart.cshtml
+++ b/WebApplication1/Views/Home/Cart.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Cart";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
@@ -11,7 +10,7 @@
             <div class="col-lg-12">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a href="index.cshtml">Home</a></li>
+                        <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Cart</a></li>
                     </ol>
                 </nav>
