--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<WebApplication1.Models.Flavour>
 @{
     ViewData["Title"] = "Home";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
@@ -44,7 +44,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>It's<br>Ice-Cream<br>Time</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a asp-action="Flavours" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -58,7 +58,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>It's<br>Ice-Cream<br>Time</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a asp-action="Flavours" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>It's<br>Ice-Cream<br>Time</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a asp-action="Flavours" class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                     <span>All</span>
                                 </div>
                                 <div class="favorit-items">
-                                 <a href="shop.html" class="btn">Shop Now</a>
+                                <a asp-action="Flavours" class="btn">Shop Now</a>
                              </div>
                          </div>
                      </div>
@@ -120,7 +120,7 @@
                             <span>Sorbet</span>
                         </div>
                         <div class="favorit-items">
-                         <a href="shop.html" class="btn">Shop Now</a>
+                                <a asp-action="Flavours" class="btn">Shop Now</a>
                      </div>
                  </div>
              </div>
@@ -133,7 +133,7 @@
                         <span>Sugar-Free</span>
                     </div>
                     <div class="favorit-items">
-                     <a href="shop.html" class="btn">Shop Now</a>
+                                <a asp-action="Flavours" class="btn">Shop Now</a>
                  </div>
              </div>
          </div>
@@ -154,200 +154,44 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
-                    <div class="popular-img">
-                        <img src="assets/img/gallery/arrival1.png" alt="">
-                        <div class="favorit-items">
-                            <!-- <span class="flaticon-heart"></span> -->
-                            <img src="assets/img/gallery/favorit-card.png" alt="">
+                @foreach (var item in Model)
+                {
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                        <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
+                            <a asp-action="Flavour" asp-route-id="@item.Id">
+                                <div class="popular-img">
+                                    <img src="~/assets/img/NewFolder/@Html.DisplayFor(modelItem => item.ImageURL)" alt="">
+                                    <div class="favorit-items">
+                                        <span class="flaticon-heart"></span>
+                                        <img src="~/assets/img/gallery/favorit-card.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="popular-caption">
+                                    <h3><a href="product_details.html">@Html.DisplayFor(modelItem => item.Name)</a></h3>
+                                    <span>@Html.DisplayFor(modelItem => item.Price)$ per liter</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                    <div class="popular-caption">
-                        <h3><a href="product_details.html">Knitted Jumper</a></h3>
-                        <div class="rating mb-10">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                        <span>$ 30.00</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                    <div class="popular-img">
-                        <img src="assets/img/gallery/arrival2.png" alt="">
-                        <div class="favorit-items">
-                            <!-- <span class="flaticon-heart"></span> -->
-                            <img src="assets/img/gallery/favorit-card.png" alt="">
-                        </div>
-                    </div>
-                    <div class="popular-caption">
-                     <h3><a href="product_details.html">Knitted Jumper</a></h3>
-                     <div class="rating mb-10">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <span>$ 30.00</span>
-                </div>
-            </div>
-        </div>
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-            <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                <div class="popular-img">
-                    <img src="assets/img/gallery/arrival3.png" alt="">
-                    <div class="favorit-items">
-                        <!-- <span class="flaticon-heart"></span> -->
-                        <img src="assets/img/gallery/favorit-card.png" alt="">
-                    </div>
-                </div>
-                <div class="popular-caption">
-                 <h3><a href="product_details.html">Knitted Jumper</a></h3>
-                 <div class="rating mb-10">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <span>$ 30.00</span>
-            </div>
+                }
         </div>
     </div>
-    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-        <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
-            <div class="popular-img">
-                <img src="assets/img/gallery/arrival4.png" alt="">
-                <div class="favorit-items">
-                    <!-- <span class="flaticon-heart"></span> -->
-                    <img src="assets/img/gallery/favorit-card.png" alt="">
-                </div>
-            </div>
-            <div class="popular-caption">
-             <h3><a href="product_details.html">Knitted Jumper</a></h3>
-             <div class="rating mb-10">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-            </div>
-            <span>$ 30.00</span>
-        </div>
-    </div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-    <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-        <div class="popular-img">
-            <img src="assets/img/gallery/arrival5.png" alt="">
-            <div class="favorit-items">
-                <!-- <span class="flaticon-heart"></span> -->
-                <img src="assets/img/gallery/favorit-card.png" alt="">
+        <div class="row justify-content-center">
+            <div class="room-btn">
+                <a asp-action="Flavours" class="border-btn">Browse More</a>
             </div>
         </div>
-        <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
-         <div class="rating mb-10">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <span>$ 30.00</span>
-    </div>
 </div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-    <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-        <div class="popular-img">
-            <img src="assets/img/gallery/arrival6.png" alt="">
-            <div class="favorit-items">
-                <!-- <span class="flaticon-heart"></span> -->
-                <img src="assets/img/gallery/favorit-card.png" alt="">
-            </div>
-        </div>
-        <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
-         <div class="rating mb-10">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <span>$ 30.00</span>
-    </div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-    <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">
-        <div class="popular-img">
-            <img src="assets/img/gallery/arrival7.png" alt="">
-            <div class="favorit-items">
-                <!-- <span class="flaticon-heart"></span> -->
-                <img src="assets/img/gallery/favorit-card.png" alt="">
-            </div>
-        </div>
-        <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
-         <div class="rating mb-10">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <span>$ 30.00</span>
-    </div>
-</div>
-</div>
-<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-    <div class="single-new-arrival mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
-        <div class="popular-img">
-            <img src="assets/img/gallery/arrival8.png" alt="">
-            <div class="favorit-items">
-                <!-- <span class="flaticon-heart"></span> -->
-                <img src="assets/img/gallery/favorit-card.png" alt="">
-            </div>
-        </div>
-        <div class="popular-caption">
-         <h3><a href="product_details.html">Knitted Jumper</a></h3>
-         <div class="rating mb-10">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-        </div>
-        <span>$ 30.00</span>
-    </div>
-</div>
-</div>
-</div>
-<!-- Button -->
-<div class="row justify-content-center">
-    <div class="room-btn">
-        <a href="catagori.html" class="border-btn">Browse More</a>
-    </div>
-</div>
-</div>
-</div>
+
 <!--? New Arrival End -->
 <!--? collection -->
-<section class="collection section-bg2 section-padding30 section-over1 ml-15 mr-15" data-background="assets/img/gallery/section_bg01.png">
+    <section class="collection section-bg2 section-padding30 section-over1 ml-15 mr-15" data-background="./assets/img/NewFolder/NewFolder1/store.jpg">
     <div class="container-fluid"></div>
     <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9">
             <div class="single-question text-center">
-                <h2 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">collection houses our first-ever</h2>
-                <a href="about.html" class="btn class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">About Us</a>
+                <h2 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">a one of a kind <br /> ice cream boutiqe</h2>
+                <a asp-action="About" class="btn wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">About Us</a>
             </div>
         </div>
     </div>
@@ -355,7 +199,7 @@
 </section>
 <!-- End collection -->
 <!--? Popular Locations Start 01-->
-<div class="popular-product pt-50">
+<!--<div class="popular-product pt-50">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -364,8 +208,8 @@
                         <img src="assets/img/gallery/popular-imtes1.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
-                        <a href="product_details.html" class="btn">Read More</a>
+							<p><a href="#">Established fact that by the<br> readable content</a></p>
+                        <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -375,14 +219,14 @@
                         <img src="assets/img/gallery/popular-imtes2.png" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
-                        <a href="product_details.html" class="btn">Read More</a>
+                        <p><a href="#">Established fact that by the<br> readable content</a></p>
+                        <a href="#" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div>-->
 <!-- Popular Locations End -->
 <!--? Services Area Start -->
 <div class="categories-area section-padding40 gray-bg">
