--- a/WebApplication1/Views/Manager/Delete.cshtml
+++ b/WebApplication1/Views/Manager/Delete.cshtml
@@ -1,15 +1,19 @@
 ﻿@model WebApplication1.Models.Flavour
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
+<div class="ml-55">
+<h1>Delete</h1>
 
-<h1>Details</h1>
-
-<div>
+<h3 style="color:black;">Are you sure you want to delete this?</h3>
     <h4>Flavour</h4>
     <hr />
+    </div>
+<div class="ml-55 mb-10">
+<div>
+    
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -36,8 +40,11 @@
             @Html.DisplayFor(model => model.ImageURL)
         </dd>
     </dl>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index" style="color:darkblue">Back to List</a>
+    </form>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id" style="color:darkblue">Edit</a> |
-    <a asp-action="Index" style="color:darkblue">Back to List</a>
 </div>
