--- a/WebApplication1/Views/Manager/Edit.cshtml
+++ b/WebApplication1/Views/Manager/Edit.cshtml
@@ -1,18 +1,22 @@
 ﻿@model WebApplication1.Models.Flavour
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
-
-<h1>Create</h1>
+<div class="ml-55">
+<h1>Edit</h1>
 
 <h4>Flavour</h4>
+</div>
 <hr />
+
+<div class="ml-55 mb-10">
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -34,7 +38,7 @@
                 <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -43,4 +47,4 @@
 <div>
     <a asp-action="Index" style="color:darkblue">Back to List</a>
 </div>
-
+</div>
