--- a/WebApplication1/Views/Manager/Index.cshtml
+++ b/WebApplication1/Views/Manager/Index.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
 }
-
+<div class="ml-55">
 <h1>Index</h1>
 
 <p>
     <a asp-action="Create" style="color:darkblue">Create New</a>
 </p>
+</div>
 <table class="table">
     <thead>
         <tr>
@@ -41,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                    <img src="~\assets\img\NewFolder\@Html.DisplayFor(modelItem => item.ImageURL)" width="150" height="150" />
+                    <img src="~/assets/img/NewFolder/@Html.DisplayFor(modelItem => item.ImageURL)" alt="" width="100" height="100">
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" style="color:darkblue">Edit</a> |
@@ -52,3 +53,4 @@
 }
     </tbody>
 </table>
+
