--- a/WebApplication1/Views/Shared/ProjectLayout.cshtml
+++ b/WebApplication1/Views/Shared/ProjectLayout.cshtml
@@ -88,7 +88,7 @@
                                     </li>
                                     <li>
                                         <div class="card-stor">
-                                            <a asp-action="Cart">
+                                            <a asp-controller="Cart" asp-action="Index">
                                             <img src="~/assets/img/gallery/card.svg" alt="">
                                             <span>0</span>
                                             </a>
