--- a/WebApplication1/wwwroot/assets/css/style.css
+++ b/WebApplication1/wwwroot/assets/css/style.css
@@ -411,7 +411,7 @@ hr {
     top: 0;
     width: 101%;
     height: 101%;
-    background: #8c6ae4;
+    background: #fd8f5f;
     z-index: 1;
     border-radius: 5px;
     transition: transform 0.5s;
