--- a/WebApplication1/Views/Cart/Index.cshtml
+++ b/WebApplication1/Views/Cart/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebApplication1.Controllers;
-@model List<CartItem>
+﻿
+@model CartView
 @{
     ViewData["Title"] = "Cart";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
@@ -12,7 +12,7 @@
                 <div class="col-lg-12">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a asp-action="Index">Home</a></li>
+                            <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
                             <li class="breadcrumb-item"><a href="#">Cart</a></li>
                         </ol>
                     </nav>
@@ -29,46 +29,37 @@
                             <thead>
                                 <tr>
                                     <th class="product-thumbnail">Image</th>
-                                    <th class="product-name">Product</th>
+                                    <th class="product-name">Flavour</th>
                                     <th class="product-price">Price</th>
+                                    <th class="product-size">Size</th>
                                     <th class="product-quantity">Quantity</th>
                                     <th class="product-total">Total</th>
                                     <th class="product-remove">Remove</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (var item in Model)
+                                @for (var i = 0; i < Model.CartItems.Count; i++)
                                 {
-                                    Flavour a= CartController.GetFlavourById(item.FlavourId);
+                                    var cartItem = Model.CartItems[i];
+                                    var flavour = Model.Flavours[i];
 
                                     <tr>
                                     <td class="product-thumbnail">
-                                            <img src="~/assets/img/NewFolder/NewFolder1/@a.ImageURL" alt="Image" class="img-fluid">
+                                            <img src="~/assets/img/NewFolder/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
                                     </td>
-                                    <td class="product-name">
-                                        <h2 class="h5 text-black">@a.Name</h2>
-                                    </td>
-                                        <td>@a.Price$ per liter</td>
+                                    <td>@flavour.Name</td>
+                                    <td>@flavour.Price$ per liter</td>
+                                    <td>@cartItem.Size liter</td>
                                     <td>
 										<div class="mb-5">
 											<div class="quantity buttons_added">
-                                                    <input type="button" value="-" class="minus"><input type="number" step="1" min="1" max="" name="quantity" value=@item.Quantity title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input type="button" value="+" class="plus">
+                                                    <input type="button" value="-" class="minus"><input type="number" step="1" min="1" max="" name="quantity" value=@cartItem.Quantity title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input type="button" value="+" class="plus">
 											</div>
 
 										</div>
-                                        <!--<div class="input-group mb-3" style="max-width: 120px;">
-                                            <div class="input-group-prepend">
-                                                <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                                            </div>
-                                            <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                                            <div class="input-group-append">
-                                                <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                                            </div>
-                                        </div>-->
-
                                     </td>
-                                    <td>@item.Price</td>
-                                    <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+                                    <td>@cartItem.Price</td>
+                                        <td><a href="#" class="genric-btn danger-border radius" width="20" height="20">X</a></td>
                                 </tr>
                                 } 
                             </tbody>
@@ -80,11 +71,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="row mb-5">
-                        <div class="col-md-6 mb-3 mb-md-0">
-                            <button class="btn btn-primary btn-sm btn-block">Update Cart</button>
-                        </div>
                         <div class="col-md-6">
-                            <button class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</button>
+                            <button class="genric-btn primary radius">Continue Shopping</button>
                         </div>
                     </div>
                     <div class="row">
@@ -95,8 +83,8 @@
                         <div class="col-md-8 mb-3 mb-md-0">
                             <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
                         </div>
-                        <div class="col-md-4">
-                            <button class="btn btn-primary btn-sm">Apply Coupon</button>
+                        <div class="col-md-4 mb-10">
+                            <button class="genric-btn primary radius">Apply Coupon</button>
                         </div>
                     </div>
                 </div>
@@ -127,7 +115,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                                    <button class="btn mb-10" onclick="window.location='checkout.html'">Proceed To Checkout</button>
                                 </div>
                             </div>
                         </div>
