--- a/WebApplication1/Views/Shared/ProjectLayout.cshtml
+++ b/WebApplication1/Views/Shared/ProjectLayout.cshtml
@@ -54,9 +54,9 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a asp-action="Index">Home</a></li>
-                                        <li><a asp-action="Flavours">shop</a></li>
-                                        <li><a asp-action ="About">About</a></li>
+                                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
+                                        <li><a asp-controller="Home" asp-action="Flavours">shop</a></li>
+                                        <li><a asp-controller="Home" asp-action ="About">About</a></li>
                                         <!--<li>
                                             <a href="blog.html">Blog</a>
                                             <ul class="submenu">
@@ -66,7 +66,7 @@
                                                 <li><a href="product_details.html">Product Details</a></li>
                                             </ul>
                                         </li>-->
-                                        <li><a asp-action="Contact">Contact</a></li>
+                                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
