--- a/WebApplication1/Views/Cart/Index.cshtml
+++ b/WebApplication1/Views/Cart/Index.cshtml
@@ -72,7 +72,7 @@
                 <div class="col-md-6">
                     <div class="row mb-5">
                         <div class="col-md-6">
-                            <button class="genric-btn primary radius">Continue Shopping</button>
+                            <a class="genric-btn primary radius" asp-controller="Home" asp-action="Flavours">Continue Shopping</a>
                         </div>
                     </div>
                     <div class="row">
@@ -80,10 +80,10 @@
                             <label class="text-black h4" for="coupon">Coupon</label>
                             <p>Enter your coupon code if you have one.</p>
                         </div>
-                        <div class="col-md-8 mb-3 mb-md-0">
+                        <div class="col-md-8 mb-3 mb-md-3">
                             <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
                         </div>
-                        <div class="col-md-4 mb-10">
+                        <div class="col-md-12  mb-10">
                             <button class="genric-btn primary radius">Apply Coupon</button>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <button class="btn mb-10" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                                    <a class="btn mb-10" asp-action="Checkout">Proceed To Checkout</a>
                                 </div>
                             </div>
                         </div>
