--- a/WebApplication1/Views/Home/Flavour.cshtml
+++ b/WebApplication1/Views/Home/Flavour.cshtml
@@ -32,14 +32,24 @@
 				<p><strong class="text-primary h4">@Html.DisplayFor(model => model.Price)$ per liter</strong></p>
 				<div class="mb-1 d-flex">
 					<label for="option-sm" class="d-flex mr-3 mb-3">
-						<span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-sm" name="shop-sizes"></span> <span class="d-inline-block text-black">1/4 Liter</span>
+						<span class="d-inline-block mr-2" style="top:-2px; position: relative;">
+							<input type="radio" id="option-sm" name="shop-sizes" value="0.25"> <!-- Specify the value for this size -->
+						</span>
+						<span class="d-inline-block text-black">1/4 Liter</span>
 					</label>
 					<label for="option-md" class="d-flex mr-3 mb-3">
-						<span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-md" name="shop-sizes"></span> <span class="d-inline-block text-black">1/2 Liter</span>
+						<span class="d-inline-block mr-2" style="top:-2px; position: relative;">
+							<input type="radio" id="option-md" name="shop-sizes" value="0.5"> <!-- Specify the value for this size -->
+						</span>
+						<span class="d-inline-block text-black">1/2 Liter</span>
 					</label>
 					<label for="option-lg" class="d-flex mr-3 mb-3">
-						<span class="d-inline-block mr-2" style="top:-2px; position: relative;"><input type="radio" id="option-lg" name="shop-sizes"></span> <span class="d-inline-block text-black">Liter</span>
+						<span class="d-inline-block mr-2" style="top:-2px; position: relative;">
+							<input type="radio" id="option-lg" name="shop-sizes" value="1"> <!-- Specify the value for this size -->
+						</span>
+						<span class="d-inline-block text-black">Liter</span>
 					</label>
+
 				</div>
 				<div class="mb-5">
 					<div class="quantity buttons_added">
@@ -65,8 +75,10 @@
 				e.preventDefault(); // Prevent the default form submission
 
 				// Get the product ID or any other relevant data you need
-				var productId = @Model.Id; // Replace with the actual way you get the product ID
+				var productId = @Model.Id; 
 
+				// Get the selected size
+				var selectedSize = $("input[name='shop-sizes']:checked").val();
 				// Send an AJAX request to add the product to the cart
 				$.ajax({
 					url: '@Url.Action("AddToCart", "Cart")', // Use Url.Action to generate the correct URL
@@ -86,7 +98,6 @@
 			});
 		});
 	</script>
-
 </div>
 
 
