--- a/WebApplication1/Views/Cart/Checkout.cshtml
+++ b/WebApplication1/Views/Cart/Checkout.cshtml
@@ -209,7 +209,7 @@
                   <div class="input-group w-75">
                     <input type="text" class="form-control" id="c_code" placeholder="Coupon Code" aria-label="Coupon Code" aria-describedby="button-addon2">
                     <div class="input-group-append">
-                      <button class="btn btn-primary btn-sm" type="button" id="button-addon2">Apply</button>
+                                        <button class="genric-btn primary radius" type="button" id="button-addon2">Apply</button>
                     </div>
                   </div>
 
