--- a/WebApplication1/Views/Home/Flavours.cshtml
+++ b/WebApplication1/Views/Home/Flavours.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Flavour>
+﻿@model IEnumerable<ZeldaWebsite.Models.Flavour>
 @{
     ViewData["Title"] = "Shop";
     Layout = "~/Views/Shared/ProjectLayout.cshtml";
