--- a/WebApplication1/Views/Home/Flavour.cshtml
+++ b/WebApplication1/Views/Home/Flavour.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Flavour
+﻿@model ZeldaWebsite.Models.Flavour
 @{
 	ViewData["Title"] = Html.DisplayNameFor(model => model.Name);
 	Layout = "~/Views/Shared/ProjectLayout.cshtml";
