--- a/WebApplication1/Views/Manager/Index.cshtml
+++ b/WebApplication1/Views/Manager/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.Flavour>
+﻿@model IEnumerable<ZeldaWebsite.Models.Flavour>
 
 @{
     ViewData["Title"] = "Index";
