--- a/ZeldaWebsite/Views/Cart/Index.cshtml
+++ b/ZeldaWebsite/Views/Cart/Index.cshtml
@@ -32,7 +32,6 @@
                                     <th class="product-name">Flavour</th>
                                     <th class="product-price">Price</th>
                                     <th class="product-size">Size</th>
-                                    <th class="product-quantity">Quantity</th>
                                     <th class="product-total">Total</th>
                                     <th class="product-remove">Remove</th>
                                 </tr>
@@ -43,24 +42,17 @@
                                     var cartItem = Model.CartItems[i];
                                     var flavour = Model.Flavours[i];
 
-                                    <tr>
+                                    <tr data-product-id="@flavour.Id">
                                     <td class="product-thumbnail">
                                             <img src="~/assets/img/NewFolder/@flavour.ImageURL" alt="Image" class="img-fluid" width="100" height="100">
                                     </td>
                                     <td>@flavour.Name</td>
                                     <td>@flavour.Price$ per liter</td>
                                     <td>@cartItem.Size liter</td>
-                                    <td>
-										<div class="mb-5">
-											<div class="quantity buttons_added">
-                                                    <input type="button" value="-" class="minus"><input type="number" step="1" min="1" max="" name="quantity" value=@cartItem.Quantity title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input type="button" value="+" class="plus">
-											</div>
-
-										</div>
-                                    </td>
-                                    <td>@cartItem.Price</td>
+                                    
+                                    <td>@cartItem.Price.ToString("F2")</td>
                                         <td><a href="#" class="genric-btn danger-border radius" width="20" height="20">X</a></td>
-                                </tr>
+                                    </tr>
                                 } 
                             </tbody>
                         </table>
@@ -96,20 +88,13 @@
                                     <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col-md-6">
-                                    <span class="text-black">Subtotal</span>
-                                </div>
-                                <div class="col-md-6 text-right">
-                                    <strong class="text-black">$230.00</strong>
-                                </div>
-                            </div>
+                            
                             <div class="row mb-5">
                                 <div class="col-md-6">
                                     <span class="text-black">Total</span>
                                 </div>
                                 <div class="col-md-6 text-right">
-                                    <strong class="text-black">$230.00</strong>
+                                    <strong class="text-black">@Model.Total()$</strong>
                                 </div>
                             </div>
 
@@ -124,5 +109,8 @@
             </div>
         </div>
     </div>
+    <script>
+      
+    </script>
 </main>
 
